--- a/src/sass/details.scss
+++ b/src/sass/details.scss
@@ -1,5 +1,6 @@
 *{font-size: 12px;}
-.details{background-color: #eee;height: 1000px;
+.yew{color: #ee9c23;}
+.details{background-color: #eee;
 
     .homeurl{width: 100%;height: 50px;
         line-height: 50px;
@@ -25,7 +26,9 @@
             .ygmjs{float: left; font-size: 12px;}
         }
         .goodste_bot{
-            height: 720px;
+            // height: 720px;
+            overflow: hidden;
+            padding-bottom: 40px;
             background-color: #fff;
             .goodste_bl{
                 box-sizing: border-box;
@@ -99,33 +102,240 @@
                             }
                             
                         }
-                        .goodste_brt{
-                            .spshuliang{ margin-bottom: 20px;
-                                width: 100%;
-                                .spsl{
-                                    font-size: 12px!important;
-                                    .spbtn{
-                                        font-size: 12px;
-                                        display:inline-block;
-                                        width: 20px;
-                                        height: 20px;
-                                        text-align: center;
-                                        border: 1px solid #666;
-                                        background-color: #eee;
-                                    }
-                                    #jssl{
-                                        display: inline-block;
-                                        width: 25px;
-                                        height: 20px;
-                                    }
+
+                    }
+                }
+                .goodste_brt{
+                    .spshuliang{
+                        margin-top: 10px;
+                        width: 100%;height: 21px;
+                   
+                            font-size: 12px;
+                            .spbtn{
+                                font-size: 14px;
+                                display:inline-block;
+                                width: 20px;
+                                height: 20px;
+                                color:#555;
+                                font-weight: bold;
+                                text-align: center;
+                                border: 1px solid #666;
+                                background-color: #efefef;
+                                vertical-align: middle;
+                            }
+                            #jssl{  
+                                width: 25px;
+                                height: 20px;
+                                background-color: #eee;
+
+                            }
+                    }
+
+                    .detail{
+                        display: block;
+                        height: 24px;
+                        color: #888888;
+                        padding-left: 5px;
+                        padding-top: 20px;
+
+                        .action-price{color:#ec3e7d;
+                            font-size: 26px;
+                            line-height: 1.2;
+                            text-decoration: none;
+                        }
+
+                    }
+                   .xgbtbox{width: 100%;
+                        margin-top: 40px;
+                        height: 60px;
+                        .dhtzbyn{  
+                            float: left;   
+                            width: 146px;
+                            height: 40px;
+                            line-height: 38px;
+                            color: #fff;
+                            font-size: 16px;
+                            letter-spacing: 4px;
+                            background: #ec3e7d;
+                            border-radius: 5px;
+                        }
+                        .smgw{
+                            box-sizing: border-box;
+                            font-size: 12px;
+                            background-color: #fff;
+                            color:#666;
+                            border: 1px solid #111;
+                            text-align: center;
+                            padding: 0px;
+                            margin-left: 10px;
+                            position: relative;
+                            .smgw{
+                                display: none;
+                                position: absolute;
+                                top:-150px;
+                                left: -12px;
+                                width: 148px;
+                                height: 148px;
+                                background: url('../img/details/smgw.png') no-repeat;
+                                background-size: cover;
+                            }
+                            &:hover .smgw{display: block;}
+
+                        }
+                        
+                   }
+
+                   .pinglun{
+                        overflow: hidden;
+
+                        width: 100%;
+                        height: 40px;
+                        color: #333;
+                        
+                    }
+
+                    .fenxiang{
+                        width: 100%;
+                        .fenxiang_r{
+                            padding-right: 60px;
+                            float: right;
+                            a{margin-right: 10px;
+                                display: inline-block;
+                                width: 18px;
+                                height: 16px;
+                                background: url('../img/details/fx1.png') no-repeat;
+                                background-size: cover;
+                                &:nth-child(2){
+                                    background: url('../img/details/fx2.png') no-repeat;
                                 }
                             }
-                          
                         }
+
                     }
+                  
                 }
                 
             }
         }
+    }
+
+    .xqmain{
+        width: 100%;background-color: #eee;
+
+        .cnxh{overflow: hidden;
+            .cnxhbt{padding-top: 20px;
+                
+                width: 100px;height: 50px;
+                font-size: 16px;
+                color:#333;
+                line-height: 50PX;}
+            .xhlist li{
+                float: left;
+                width: 212px;
+                height: 310px;
+                padding: 10px 9px 8px 9px;
+                border: solid 1px #eee;
+                background: #fff;
+                margin-right: 10px;
+               
+                img{
+                    width: 212px;
+                    height: 212px;
+                    margin-bottom: 20px;
+                }
+                &:hover img{opacity: 0.5;}
+                &:last-child{margin-right: 0px;}
+                .cnnr{
+                    color:#888;
+                }
+                .cnscpace{
+                   
+                   span{
+                        font-size: 24px;
+                       color: #e93b78;
+                   }
+                }
+            }
+        }
+
+        // 商品参数
+
+        .spcs{width: 100%;overflow: hidden;
+            margin-top: 30px;
+            .spcs_l{background-color: #fff;
+                width: 247px;
+                .spcs_lt{
+                   
+                    width: 100%;
+                    height: 50px;
+                    position: relative;
+                    border-bottom: 1px solid #666;
+                    .lsbt{
+                        font-size: 18px;
+                        line-height: 50px;
+                        padding-left: 23px;
+                        
+                   
+                    }
+                    .lsbtl{
+                        position: absolute;
+                        
+                        top: 0;
+                        left: 0;
+                        width: 6px;
+                        height: 50px;
+                        background-color: #58bc58;
+                        }
+
+                }
+                .spcs_lb{
+                    min-height: 900px;
+                    overflow: hidden;
+                    li{
+                        width: 100%;
+                        height: 69px;
+                        border-bottom: 1px dashed #d4d4d4;
+                        padding: 20px 10px;
+                        margin-top: -1px;
+                        .spcs_lbl{
+                            overflow: hidden;
+                            width: 69px;
+                            height: 69px;
+                            margin: 0;
+                            padding: 0px;
+                        }
+                        .spcs_lbr{
+                            width: 167px;
+                            overflow: hidden;
+                            color: #3e3e3e;
+                            .lsnr{
+                                width: 150px;
+                                overflow: hidden;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                               
+                            }
+                        }
+
+                    }
+                }
+            }
+            .spcs_r{
+                width: 920px;
+                background-color: #fff;
+                .xq_xdbox{
+                    width: 100%;
+                    color: #555c67;
+                    border: 1px solid white;
+                    display: block;
+                    padding: 2px 26px;
+                    height: 42px;
+                    line-height: 42px;
+                    font-size: 16px 
+                }
+            }
+        }
+        
     }
 }
